--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,9 @@
-# Railway deployment configuration for Flask (Gunicorn) + Bun-built frontend
+# Railway deployment configuration for Bun server
 
 [build]
-# Use Nixpacks builder; install deps and build frontend assets
-builder = "NIXPACKS"
-buildCommand = "bun install && bun run build && python3 -m pip install -r requirements.txt"
+builder = "nixpacks"
+buildCommand = "bun install && bun run build"
 
 [deploy]
-# Start the Flask app via Gunicorn; Railway provides PORT env var
-startCommand = "gunicorn -w 2 -k gthread -b 0.0.0.0:$PORT app:app"
+startCommand = "bun run serve"
 healthcheckPath = "/"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 3
