--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: '20'
 
       - name: Install deps
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: Build
         run: bun run build
