--- a/railway.toml
+++ b/railway.toml
@@ -6,4 +6,4 @@ buildCommand = "bun install && bun run build"
 startCommand = "bun run ./src/server/index.ts"
 healthcheckPath = "/"
 
-SERVE_INDEX=dist
+SERVE_INDEX='dist'
