--- a/railway.toml
+++ b/railway.toml
@@ -3,8 +3,8 @@ builder = "nixpacks"
 buildCommand = "bun install && bun run build"
 
 [deploy]
-startCommand = "bun run ./src/server/index.ts"
+startCommand = "bun start"
 healthcheckPath = "/api/hello"   # safer healthcheck, since / may 404 in CI
 
 [env]
-SERVE_INDEX = "dist"
+SERVE_INDEX = ""
